Replace pre tags with code to avoid overflow

--- a/process_styles.css
+++ b/process_styles.css
@@ -16,7 +16,11 @@ h1, h2, h3, h4, p {
 ul {
   padding-left: 20px;
 }
-
+code {
+  color: #585454;
+  font-size: 12px;
+  font-style: italic;
+}
 .top-container-container,
 .full-process,
 .process-part,
